syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.bravewave.conferencing.chatgrpc.gen";

package conferencing.chat;

message UUID {
  string value = 1;
}

message ChatMessageRequest {
  UUID id = 1;
  string conferenceId = 2;
  string chatType = 3;
  string from = 4;
  optional string to = 5;
  string text = 6;
}

message ChatMessageResponse {
  UUID id = 1;
  string conferenceId = 2;
  string chatType = 3;
  string from = 4;
  optional string to = 5;
  string text = 6;
  google.protobuf.Timestamp timestamp = 7;
}

service ChatEngineService {
  rpc SendMessage(ChatMessageRequest) returns (ChatMessageResponse) {}
}
